--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     </head>
     <body>
     <header>
-      <h1>Today's things to do!</h1>
+      <h1 id="mobile">Today's things to do!</h1>
     </header>  
     <section>
     <p>What do you want to do? (first to last)<br>
         Mark off in any order!</p>
-      <input type="text"><button onclick="addToDo()">Add</button>
+      <input id="myInputBox" type="text"><button id="myBtn" onclick="addToDo()">Add</button>
       <ol id="toDoList">
         
       </ol>  
