enter event listener added

--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
         <script src= "functions.js" defer></script>
     </head>
     <body>
+      <script>
+
+        </script>
     <header>
       <h1 id="mobile">Today's things to do!</h1>
     </header>  
     <section>
     <p>What do you want to do? (first to last)<br>
         Mark off in any order!</p>
-      <input id="myInputBox" type="text"><button id="myBtn" onclick="addToDo()">Add</button>
+
+      <input id="myInputBox" type="text">
+      
+        <button id="myBtn" onclick="addToDo()">
+          Add
+        </button>
+
       <ol id="toDoList">
-        
-      </ol>  
+
+      </ol>
+
     </section>
     </body>
 </html>
